--- a/faircraft/translations.qrc
+++ b/faircraft/translations.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>translation/faircraft_zh_CN.qm</file>
+        <file>translation/faircraft_en_US.qm</file>
     </qresource>
 </RCC>
